# mcp-video-extraction-plus

./: AGENTS.md  CHANGES_SUMMARY.txt  MODIFICATIONS.md  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
src/mcp_video_service/: __init__.py
src/mcp_video_service/services/: asr_data.py  base_asr.py  bcut_asr.py  jianying_asr.py  status.py  video_service.py
