[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-video-extraction"
version = "0.1.6"
description = "A Model Context Protocol server that provides text extraction capabilities from various video platforms and audio files, supporting multiple platforms like YouTube, Bilibili, TikTok, and more using Whisper for high-quality speech recognition"
readme = "README.md"
authors = [{ name = "Seazhang" }]
maintainers = [{ name = "Seazhang", email = "sealing.pp2@gmail.com" }]
keywords = ["video", "audio", "mcp", "whisper", "transcription", "youtube-dl"]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai-whisper>=20231117",
    "yt-dlp>=2024.3.10",
    "mcp[cli]>=1.1.3",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-video-extraction"
Repository = "https://github.com/yourusername/mcp-video-extraction.git"

[project.scripts]
mcp-video-extraction = "mcp_video_service.__main__:main"

[tool.uv]
dev-dependencies = [
    "openai-whisper>=20231117",
    "yt-dlp>=2024.3.10",
    "mcp[cli]>=1.1.3",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_video_service"]
